# spiral-bot

./: .gitignore  Cargo.toml  README.md  spiral.service
.github/workflows/: rust.yml
src/: main.rs
src/core/: app.rs  common.rs  db.rs  handler.rs  mod.rs
systemd/: spiral-watcher.path  spiral.service
systemd/user/multi-user.target.wants/: spiral-watcher.service
